Upgrade web3.js to last release 1.2.1 (and cleanup)

--- a/src/main.html
+++ b/src/main.html
@@ -18,7 +18,7 @@
                     <h4 class="modal-title">Details</h4>
                 </div>
                 <div class="modal-body">
-                    <iframe frameBorder="0" sandbox="allow-scripts" name="myFrame" style="width:1000px;height:400px;"
+                    <iframe frameBorder="0" sandbox="allow-same-origin allow-scripts" name="myFrame" style="width:1000px;height:400px;"
                             src=""></iframe>
                 </div>
                 <div class="modal-footer">
