Improve layout of table and change title EthEventScan

--- a/src/main.html
+++ b/src/main.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>contract-event-scan</title>
+    <title>EthEventScan</title>
     <link href="../css/bootstrap.min.css" rel="stylesheet"/>
     <link href="../css/main.css" rel="stylesheet">
 </head>
@@ -148,10 +148,10 @@
                     <table id="employee" class="table">
                         <thead>
                         <tr>
-                            <th>Number</th>
+                            <th>No.</th>
                             <th>Method</th>
                             <th>Block</th>
-                            <th>Transaction</th>
+                            <th>Trx</th>
                             <th>Time</th>
                             <th>Key</th>
                             <th>Value</th>
