--- a/src/details.html
+++ b/src/details.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>contract-event-scan-details</title>
+    <title>EthEventScan Details</title>
     <link href="../css/bootstrap.min.css" rel="stylesheet"/>
     <link href="../css/main.css" rel="stylesheet">
 </head>
